# booksapp

./: .dockerignore  .gitignore  Dockerfile  auth.py  database.py  limiter.py  logging_config.py  main.py  models.py  pyproject.toml  security.py
routers/: auth.py  books.py
tests/: conftest.py  test_books.py
